Fixed not fully visible chart issue

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -8,7 +8,7 @@
     top: 52px;
     left: -35%;
     width: 400px;
-    height: 100%;
+    height: calc(100vh - 100px);
     background-color: #fff;
     z-index: 1000;
     transition: left 0.4s ease-in-out;
